--- a/app/src/main/res/layout/fragment_empty_cart.xml
+++ b/app/src/main/res/layout/fragment_empty_cart.xml
@@ -594,6 +594,7 @@
                                 android:layout_height="28dp"
                                 android:layout_weight="1"
                                 android:background="@null"
+                                android:dropDownWidth="wrap_content"
                                 android:overlapAnchor="false" />
 
                             <View
@@ -640,6 +641,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+
                             android:gravity="center"
                             android:text="Pro Tip: Shop for multiple products to save more on shipping"
                             android:textColor="@color/black"
@@ -650,19 +652,19 @@
                             android:id="@+id/fifteen"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="33dp"
-                            android:layout_marginVertical="10dp"
+                            android:layout_marginHorizontal="12dp"
+                            android:layout_marginTop="10dp"
                             android:backgroundTint="#E68499"
-                            android:visibility="gone"
+
                             app:cardElevation="0dp"
                             app:strokeColor="#E68499">
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="5dp"
                                 android:gravity="center"
-                                android:text="Orders more than 15 items per website will incur an additional service fees of INR 50 per item"
+                                android:text="@string/orders_more_than_15"
                                 android:textColor="@color/white"
                                 android:textFontWeight="600"
                                 android:textSize="8sp" />
@@ -673,7 +675,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="32dp"
                             android:layout_gravity="center_horizontal"
-                            android:layout_marginTop="46dp"
+                            android:layout_marginTop="32dp"
                             android:layout_marginBottom="30dp"
                             android:enabled="false"
                             android:insetTop="0dp"
