--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -296,7 +296,7 @@
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"
                                 android:layout_marginLeft="4dp"
-                                android:src="@mipmap/showmore" />
+                                android:src="@drawable/play_ic" />
                         </LinearLayout>
 
                     </LinearLayout>
