--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -152,7 +152,7 @@
                             android:layout_alignParentRight="true">
 
                             <androidx.appcompat.widget.AppCompatSpinner
-
+                                style="@style/MySpinner"
                                 android:id="@+id/allSpinner"
                                 android:layout_width="92dp"
                                 android:layout_height="24dp"
