--- a/app/src/main/res/layout/return_item_dialog_box.xml
+++ b/app/src/main/res/layout/return_item_dialog_box.xml
@@ -16,6 +16,7 @@
         android:layout_marginHorizontal="30dp">
 
         <TextView
+            android:id="@+id/string"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -52,8 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginVertical="20dp"
-            android:orientation="horizontal">
+            android:layout_marginVertical="20dp">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/addMoreProductBtn"
@@ -61,6 +61,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
+                android:paddingHorizontal="17dp"
+                android:letterSpacing="0.03"
                 android:text="Add more items"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
@@ -72,8 +74,10 @@
                 android:id="@+id/proceedWith1ItemBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingHorizontal="12dp"
                 android:layout_toRightOf="@+id/addMoreProductBtn"
                 android:backgroundTint="#17B28F"
+                android:letterSpacing="0.03"
                 android:text="Proceed with 1 item"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
