--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -22,8 +22,11 @@
 <!--        <item name="DialogSpotColor">@color/hint_color</item>-->
 <!--        <item name="DialogSpotCount">8</item>-->
 <!--    </style>-->
-    <style name="MySpinner" parent="Widget.AppCompat.ListView.DropDown">
+    <style name="MySpinner" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:dividerHeight">0.5dp</item>
         <item name="android:divider">#000</item>
     </style>
+
+
+
 </resources>
