--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -51,9 +51,12 @@
 <!--    </style>-->
 
 <!--   spinner Theme -->
-    <style name="MySpinner" parent="Widget.AppCompat.ListView.DropDown">
+    <style name="MySpinner" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:dividerHeight">0.5dp</item>
         <item name="android:divider">#C4C4C4</item>
     </style>
+
+
+
 
 </resources>
