--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,5 @@
     <color name="text_red">#FF0000</color>
 
     <color name="text_blue">#2C469A</color>
+    <color name="toast_yellow">#FFBC50</color>
 </resources>
