--- a/app/src/main/res/layout/fragment_empty_cart.xml
+++ b/app/src/main/res/layout/fragment_empty_cart.xml
@@ -655,7 +655,7 @@
                             android:layout_marginHorizontal="12dp"
                             android:layout_marginTop="10dp"
                             android:backgroundTint="#E68499"
-
+                            android:visibility="gone"
                             app:cardElevation="0dp"
                             app:strokeColor="#E68499">
 
