--- a/app/src/main/res/layout/package_details_single_layout.xml
+++ b/app/src/main/res/layout/package_details_single_layout.xml
@@ -280,6 +280,15 @@
         android:layout_marginLeft="19dp"
         />
 
+    <androidx.appcompat.widget.AppCompatSpinner
+        android:id="@+id/three_dots_spinner"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+
+        android:dropDownWidth="152dp"
+        android:layout_marginLeft="19dp"
+        android:background="@drawable/three_dots"/>
+
     <CheckBox
         android:id="@+id/packageDetailCheckbox"
         android:layout_width="wrap_content"
