--- a/app/src/main/res/layout/view_photo_dialog.xml
+++ b/app/src/main/res/layout/view_photo_dialog.xml
@@ -26,10 +26,11 @@
                 android:src="@drawable/cross" />
 
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="34dp"
+                android:layout_width="284dp"
+                android:layout_height="371dp"
                 android:layout_marginTop="3dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_gravity="center_horizontal"
                 android:src="@drawable/view_photo_blurred" />
 
             <com.google.android.material.button.MaterialButton
@@ -92,6 +93,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="44dp"
             android:layout_marginBottom="20dp">
 
             <ImageView
@@ -104,12 +106,14 @@
                 android:layout_width="64dp"
                 android:layout_height="65dp"
                 android:layout_weight="1"
+                android:layout_marginLeft="31dp"
                 android:src="@drawable/additional_image"/>
 
             <ImageView
                 android:layout_width="64dp"
                 android:layout_height="65dp"
                 android:layout_weight="1"
+                android:layout_marginLeft="31dp"
                 android:src="@drawable/additional_image"/>
 
         </LinearLayout>
