--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,21 +14,19 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:dropDownListViewStyle">@style/MySpinner</item>
     </style>
-<!--    <style name="Custom" parent="android:Theme.DeviceDefault.Dialog">-->
-<!--        <item name="DialogTitleAppearance">@android:style/TextAppearance.Medium</item>-->
-<!--        <item name="DialogTitleText">Please Wait</item>-->
-<!--        <item name="DialogSpotColor">@color/hint_color</item>-->
-<!--        <item name="DialogSpotCount">8</item>-->
-<!--    </style>-->
+    <!--    <style name="Custom" parent="android:Theme.DeviceDefault.Dialog">-->
+    <!--        <item name="DialogTitleAppearance">@android:style/TextAppearance.Medium</item>-->
+    <!--        <item name="DialogTitleText">Please Wait</item>-->
+    <!--        <item name="DialogSpotColor">@color/hint_color</item>-->
+    <!--        <item name="DialogSpotCount">8</item>-->
+    <!--    </style>-->
+    <style name="MySpinner" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="android:dividerHeight">0.5dp</item>
+        <item name="android:divider">#C4C4C4</item>
+    </style>
 
-    <style name="SpinnerStyle" parent="Widget.AppCompat.ListView.DropDown">
-        <item name="android:divider">@color/black</item>
-        <item name="android:dividerHeight">1dp</item>
-    </style>
 
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <item name="android:dropDownListViewStyle">@style/SpinnerStyle</item>
-    </style>
 
 </resources>
